feat: go releaser, readme, example
