# example/simple-go/gen/api/user_http.pb.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-bic. DO NOT EDIT.
-// versions:1.2.1
+// versions:2.1.4
 
 package api
 
@@ -14,14 +14,17 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 )
+
+var UserServiceValidate = validator.New()
 
 func RegisterUserServiceHttpHandler(g *gin.RouterGroup, srvs UserService) {
 	tmp := &x_UserService{xx: srvs}
 	g.GET("/users/v1/", tmp.GetUsers)
 	g.POST("/users/v1/", tmp.PostUsers)
-	g.GET("/users/v1/:id/", tmp.GetUserInfo)
-	g.GET("/users/v1/:id/", tmp.GetUserInfoDownload)
+	g.GET("/user/v1/:id", tmp.GetUserInfo)
+	g.GET("/user/v1/:id/download", tmp.GetUserInfoDownload)
 	g.GET("/users/v1/common/nil/", tmp.GetCommonNil)
 	g.GET("/users/v1/empty/", tmp.PostEmpty)
 }
@@ -52,8 +55,8 @@ type x_UserService struct {
 // @Summary 获取用户列表
 // @Tags    User-Service
 // @Produce json
-// @Param   page      query    uint32 false "页码"
-// @Param   page_size query    uint32 false "每页数量"
+// @Param   page      query    uint32 true "页码"
+// @Param   page_size query    uint32 true "每页数量"
 // @Success 200       {object} ResponseUsers
 // @Failure 401       {string} string "header need Authorization data"
 // @Failure 403       {string} string "no api permission or no obj permission"
@@ -62,6 +65,17 @@ func (x *x_UserService) GetUsers(ctx *gin.Context) {
 	req := &RequestUsers{}
 	if err := ctx.ShouldBindQuery(req); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"code": 400, "detail": "request error"})
+		return
+	}
+	if err := UserServiceValidate.Struct(req); err != nil {
+		msg := "request param validator error"
+		if gin.Mode() == gin.DebugMode {
+			msg = msg + " | " + err.Error()
+		}
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"code":   400,
+			"detail": msg,
+		})
 		return
 	}
 	rsp, errCode := x.xx.GetUsers(ctx, req)
@@ -79,14 +93,26 @@ func (x *x_UserService) GetUsers(ctx *gin.Context) {
 // @Param   id       body     uint32 false "主键ID"
 // @Param   username body     string false "用户名"
 // @Param   email    body     string false "邮箱"
+// @Param   sex      body     Sex    false "性别"
 // @Success 200      {object} ResponseNil
 // @Failure 401      {string} string "header need Authorization data"
 // @Failure 403      {string} string "no api permission or no obj permission"
 // @Router  /users/v1/ [POST]
 func (x *x_UserService) PostUsers(ctx *gin.Context) {
 	req := &User{}
-	if err := ctx.Bind(req); err != nil {
+	if err := ctx.ShouldBindJSON(req); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"code": 400, "detail": "request error"})
+		return
+	}
+	if err := UserServiceValidate.Struct(req); err != nil {
+		msg := "request param validator error"
+		if gin.Mode() == gin.DebugMode {
+			msg = msg + " | " + err.Error()
+		}
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"code":   400,
+			"detail": msg,
+		})
 		return
 	}
 	rsp, errCode := x.xx.PostUsers(ctx, req)
@@ -105,11 +131,22 @@ func (x *x_UserService) PostUsers(ctx *gin.Context) {
 // @Success 200 {object} User
 // @Failure 401  {string} string "header need Authorization data"
 // @Failure 403  {string} string "no api permission or no obj permission"
-// @Router  /users/v1/:id/ [GET]
+// @Router  /user/v1/:id [GET]
 func (x *x_UserService) GetUserInfo(ctx *gin.Context) {
 	req := &RequestNil{}
 	if err := ctx.ShouldBindQuery(req); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"code": 400, "detail": "request error"})
+		return
+	}
+	if err := UserServiceValidate.Struct(req); err != nil {
+		msg := "request param validator error"
+		if gin.Mode() == gin.DebugMode {
+			msg = msg + " | " + err.Error()
+		}
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"code":   400,
+			"detail": msg,
+		})
 		return
 	}
 	id, err := strconv.Atoi(ctx.Param("id"))
@@ -118,6 +155,7 @@ func (x *x_UserService) GetUserInfo(ctx *gin.Context) {
 			"code":   400,
 			"detail": "param id should be int",
 		})
+		return
 	}
 	rsp, errCode := x.xx.GetUserInfo(ctx, req, uint(id))
 
@@ -135,11 +173,22 @@ func (x *x_UserService) GetUserInfo(ctx *gin.Context) {
 // @Success 200 {object} ResponseNil
 // @Failure 401 {string} string "header need Authorization data"
 // @Failure 403 {string} string "no api permission or no obj permission"
-// @Router  /users/v1/:id/ [GET]
+// @Router  /user/v1/:id/download [GET]
 func (x *x_UserService) GetUserInfoDownload(ctx *gin.Context) {
 	req := &RequestNil{}
 	if err := ctx.ShouldBindQuery(req); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"code": 400, "detail": "request error"})
+		return
+	}
+	if err := UserServiceValidate.Struct(req); err != nil {
+		msg := "request param validator error"
+		if gin.Mode() == gin.DebugMode {
+			msg = msg + " | " + err.Error()
+		}
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"code":   400,
+			"detail": msg,
+		})
 		return
 	}
 	id, err := strconv.Atoi(ctx.Param("id"))
@@ -148,6 +197,7 @@ func (x *x_UserService) GetUserInfoDownload(ctx *gin.Context) {
 			"code":   400,
 			"detail": "param id should be int",
 		})
+		return
 	}
 	_, _ = x.xx.GetUserInfoDownload(ctx, req, uint(id))
 }
@@ -181,6 +231,17 @@ func (x *x_UserService) PostEmpty(ctx *gin.Context) {
 	req := &RequestPostEmpty{}
 	if err := ctx.ShouldBindQuery(req); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"code": 400, "detail": "request error"})
+		return
+	}
+	if err := UserServiceValidate.Struct(req); err != nil {
+		msg := "request param validator error"
+		if gin.Mode() == gin.DebugMode {
+			msg = msg + " | " + err.Error()
+		}
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"code":   400,
+			"detail": msg,
+		})
 		return
 	}
 	rsp, errCode := x.xx.PostEmpty(ctx, req)
